<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>samxl_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michael.ripperger@swri.org">mripperger</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_rosutils</depend>
  <depend>samxl_gantry_cell</depend>
  <depend>tesseract_training_configs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
